concord_macros/tests/trybuild/fail/sema/policy/invalid_policy_secret_refs.stderr
error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/trybuild/fail/sema/policy/invalid_policy_secret_refs.rs:12:32
   |
12 |             "X-Token" = secret.token
   |                                ^^^^^

error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/trybuild/fail/sema/policy/invalid_policy_secret_refs.rs:26:28
   |
26 |             token = secret.token
   |                            ^^^^^

error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/trybuild/fail/sema/policy/invalid_policy_secret_refs.rs:39:25
   |
39 |         timeout: secret.token
   |                         ^^^^^

error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/trybuild/fail/sema/policy/invalid_policy_secret_refs.rs:55:29
   |
55 |             offset = secret.token,
   |                             ^^^^^
